# optimizacion-topologica

./: .gitignore  Makefile  README.md  build_exe.bat  install_package.bat  install_package.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/: __init__.py
src/tda/: __init__.py
src/tda/analysis/: metrics.py  stability.py
src/tda/app/: README.md  __init__.py  app_master.py  download_utils.py  theme.py
src/tda/app/pages/: 1_TDA_vs_KMedias.py  2_Optimizacion_Topologica.py  3_Optimizacion_SIMP.py  page_tda_kmedias.py
src/tda/core/: README.md  __init__.py  fem.py  metric.py  topology.py
src/tda/optimization/: README.md  __init__.py  metric_simp.py  simp_optimizer.py
src/tda/processing/: README.md  preprocessing.py  sampling.py
src/tda/simulation/: README.md  experiment_simp.py  pipeline.py
src/tda/visualization/: README.md  plots_tda.py  visualizer.py
tests/: conftest.py  test_core.py  test_imports.py
tests/analysis/: conftest.py  test_metrics.py  test_stability.py
tests/app/: conftest.py  test_pages.py
tests/core/: conftest.py  test_fem.py  test_metric.py  test_metric_simp.py  test_topology.py
tests/optimization/: test_beam_optimizer.py  test_simp_optimizer.py
tests/processing/: conftest.py  test_preprocessing.py  test_sampling.py
tests/simulation/: conftest.py  test_pipeline.py
tests/visualization/: conftest.py  test_visualizer.py
